# fastapi-pytorch

./: Dockerfile  README.md  main.py  pyproject.toml  pytorch_model.py
